# sandpiper

./: pyproject.toml
src/sandpiper/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py
