[project]
name = "sandpiper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Robert Laabs", email = "robert@rlaabs.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jedi>=0.19.2",
]

[project.scripts]
sandpiper = "sandpiper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
